--- a/ChronicleLog.App/App.xaml
+++ b/ChronicleLog.App/App.xaml
@@ -1,9 +1,7 @@
 ﻿<Application x:Class="ChronicleLog.App.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ChronicleLog.App"
-             xmlns:views="clr-namespace:ChronicleLog.App.MVVM.Views"
-             xmlns:viewmodels="clr-namespace:ChronicleLog.App.MVVM.ViewModels">
+             xmlns:local="clr-namespace:ChronicleLog.App">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
