--- a/ChronicleLog.App/MVVM/Views/CreateEditEntryView.xaml
+++ b/ChronicleLog.App/MVVM/Views/CreateEditEntryView.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="ChronicleLog.App.MVVM.Views.AddLogView"
+    x:Class="ChronicleLog.App.MVVM.Views.CreateEditView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -32,7 +32,7 @@
                 TextWrapping="Wrap"
                 x:Name="TitleTextBox"
                 Style="{StaticResource TransparentTextBox}"
-                Text="{Binding QueryTitle}">
+                Text="{Binding EntryTitle}">
             </TextBox>
             <TextBlock 
                 VerticalAlignment="Center" 
@@ -53,7 +53,7 @@
                 CharacterCasing="Upper"
                 x:Name="CategoryTextBox"
                 Style="{StaticResource TransparentTextBox}"
-                Text="{Binding QueryCategory}" />
+                Text="{Binding EntryCategory}" />
             <TextBlock 
                 VerticalAlignment="Center" 
                 Padding="10 0 0 0" 
@@ -75,7 +75,7 @@
                 TextWrapping="Wrap"
                 x:Name="DescriptionTextBox"
                 Style="{StaticResource TransparentTextBox}"
-                Text="{Binding QueryParagraph}" />
+                Text="{Binding EntryParagraph}" />
             <TextBlock 
                 Margin="10 12" 
                 Opacity="0.5"
@@ -92,7 +92,7 @@
                 Content="✓"
                 Background="{StaticResource ButtonBackgroundColor}"
                 Foreground="{StaticResource TextForegroundColor}"
-                Command="{Binding CreateQueryCommand}" 
+                Command="{Binding CreateOrEditEntryCommand}" 
                 Style="{DynamicResource RoundButton}" />
             <Button 
                 Height="30"
