--- a/ChronicleLog.App/MVVM/Views/EntryListingView.xaml
+++ b/ChronicleLog.App/MVVM/Views/EntryListingView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ChronicleLog.App.MVVM.Views.ListingLogView"
+﻿<UserControl x:Class="ChronicleLog.App.MVVM.Views.EntryListingView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -26,7 +26,7 @@
                 Margin="5 10 10 2"
                 Background="#ff99aa"
                 Style="{StaticResource RoundButton}"
-                Command="{Binding DeleteQueryCommand}">
+                Command="{Binding DeleteEntryCommand}">
                 <Button.Content>
                     <Path Data="M6 0l3 14l8 0l3 -14m-10 4l6 6m0 -6l-6 6" Stroke="White"/>
                 </Button.Content>
@@ -41,14 +41,14 @@
                 Margin="5 2 10 2"
                 Background="#ff9900"
                 Style="{StaticResource RoundButton}"
-                Command="{Binding UpdateQueryCommand}">
+                Command="{Binding EditEntryCommand}">
                 <Button.Content>
                     <Grid Height="20" Width="20">
                         <Grid.LayoutTransform>
                             <RotateTransform Angle="25" />
                         </Grid.LayoutTransform>
                         <Path Data="M7 0l0 15l3 5l3 -5l0 -15l-6 0m0 3l6 0m0 12l-6 0" Stroke="White" />
-                    </Grid> <!-- Create the icon for edit (pencil) -->
+                    </Grid>
                 </Button.Content>
                 <Button.LayoutTransform>
                     <ScaleTransform ScaleX="1.25" ScaleY="1.25" />
@@ -65,9 +65,9 @@
             BorderThickness="0"
             VirtualizingPanel.IsVirtualizing="True"
             VirtualizingPanel.ScrollUnit="Pixel"
-            SelectedItem="{Binding SelectedLog}"
+            SelectedItem="{Binding SelectedEntry}"
             ScrollViewer.VerticalScrollBarVisibility="Visible"
-            ItemsSource="{Binding LogQueryViewModels}">
+            ItemsSource="{Binding EntryViewModels}">
 
             <ListView.Resources>
                 <Style TargetType="{x:Type ScrollBar}">
@@ -128,7 +128,7 @@
         
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <components:LogQuery MaxWidth="{Binding ElementName=ListingListView, Path=MinWidth}"/>
+                    <components:Entry MaxWidth="{Binding ElementName=ListingListView, Path=MinWidth}"/>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
