--- a/ChronicleLog.App/MVVM/Views/SearchEntriesView.xaml
+++ b/ChronicleLog.App/MVVM/Views/SearchEntriesView.xaml
@@ -16,7 +16,7 @@
     </UserControl.Resources>
     <StackPanel VerticalAlignment="Center" KeyboardNavigation.TabNavigation="Cycle">
         <Border 
-            Background="#FEFEFE"
+            Background="{StaticResource SearchTextBoxBackground}"
             VerticalAlignment="Center"
             HorizontalAlignment="Center"
             Width="240"
@@ -36,7 +36,9 @@
                     AutoWordSelection="True"
                     IsUndoEnabled="True"
                     MaxLength="20"
-                    SelectionBrush="DimGray"
+                    CaretBrush="{StaticResource CaretColor}"
+                    Foreground="{StaticResource LightText}"
+                    SelectionBrush="{StaticResource SelectionColor}"
                     Text="{Binding CategoryToSearch, UpdateSourceTrigger=PropertyChanged}"
                     PreviewKeyDown="SearchCategoryTextBox_PreviewKeyDown"
                     x:Name="SearchCategoryTextBox" />
@@ -44,8 +46,8 @@
                     Grid.Column="1"
                     Width="30"
                     Height="30"
-                    Background="{StaticResource SecondaryButtonBackgroundColor}"
-                    Foreground="{StaticResource TextForegroundColor}"
+                    Background="{StaticResource SearchButtonBackground}"
+                    Foreground="{StaticResource LightText}"
                     VerticalAlignment="Stretch"
                     x:Name="SearchEntriesButton"
                     Command="{Binding SearchCategoryCommand}"
@@ -53,7 +55,8 @@
                     Content="➔" />
                 <TextBlock 
                     Text="Category i.e: Diary" 
-                    Opacity="0.5" 
+                    Opacity="0.5"
+                    Foreground="{StaticResource LightText}"
                     VerticalAlignment="Center" 
                     IsHitTestVisible="False"
                     Margin="15 2 5 2" 
