--- a/ChronicleLog.App/MVVM/Views/Components/WindowControls.xaml
+++ b/ChronicleLog.App/MVVM/Views/Components/WindowControls.xaml
@@ -31,8 +31,8 @@
 
     <UserControl.Resources>
         <Style TargetType="{x:Type Button}">
-            <Setter Property="Background" Value="#121212" />
-            <Setter Property="Foreground" Value="#FEFEFE" />
+            <Setter Property="Background" Value="{StaticResource WindowControlBackground}" />
+            <Setter Property="Foreground" Value="{StaticResource LightText}" />
             <Setter Property="BorderThickness" Value="0" />
             <Setter Property="BorderBrush" Value="Transparent" />
             <Setter Property="VerticalContentAlignment" Value="Center" />
@@ -60,7 +60,7 @@
         <Style x:Key="CloseButton" TargetType="{x:Type Button}" BasedOn="{StaticResource {x:Type Button}}">
             <Style.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="#FF0000" />
+                    <Setter Property="Background" Value="{StaticResource Hover:CloseWindowControlBackground}" />
                 </Trigger>
             </Style.Triggers>
         </Style>
