--- a/ChronicleLog.App/MVVM/Views/EntryListingView.xaml
+++ b/ChronicleLog.App/MVVM/Views/EntryListingView.xaml
@@ -15,51 +15,14 @@
              d:DesignHeight="600" d:DesignWidth="690">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
-        <StackPanel>
-            <Button 
-                HorizontalAlignment="Right" 
-                Height="30" 
-                Width="30"
-                Margin="5 10 10 2"
-                Background="#ff99aa"
-                Style="{StaticResource RoundButton}"
-                Command="{Binding DeleteEntryCommand}">
-                <Button.Content>
-                    <Path Data="M6 0l3 14l8 0l3 -14m-10 4l6 6m0 -6l-6 6" Stroke="White"/>
-                </Button.Content>
-                <Button.LayoutTransform>
-                    <ScaleTransform ScaleX="1.25" ScaleY="1.25" />
-                </Button.LayoutTransform>
-            </Button>
-            <Button 
-                HorizontalAlignment="Right" 
-                Height="30"
-                Width="30"
-                Margin="5 2 10 2"
-                Background="#ff9900"
-                Style="{StaticResource RoundButton}"
-                Command="{Binding EditEntryCommand}">
-                <Button.Content>
-                    <Grid Height="20" Width="20">
-                        <Grid.LayoutTransform>
-                            <RotateTransform Angle="25" />
-                        </Grid.LayoutTransform>
-                        <Path Data="M7 0l0 15l3 5l3 -5l0 -15l-6 0m0 3l6 0m0 12l-6 0" Stroke="White" />
-                    </Grid>
-                </Button.Content>
-                <Button.LayoutTransform>
-                    <ScaleTransform ScaleX="1.25" ScaleY="1.25" />
-                </Button.LayoutTransform>
-            </Button>
-        </StackPanel>
         <ListView 
             x:Name="ListingListView"
-            Grid.Column="1"
+            Grid.Column="0"
             Background="Transparent" 
-            Foreground="{StaticResource TextForegroundColor}" 
+            Foreground="{StaticResource LightText}" 
             HorizontalContentAlignment="Stretch" 
             UseLayoutRounding="True" 
             BorderThickness="0"
@@ -87,7 +50,7 @@
                                                 <Thumb.Template>
                                                     <ControlTemplate TargetType="{x:Type Thumb}">
                                                         <Border 
-                                                            Background="{StaticResource ScrollBarBackgroundColor}"
+                                                            Background="{StaticResource ScrollbarColor}"
                                                             Opacity="0.5"
                                                             CornerRadius="4"
                                                             Width="8"
@@ -132,5 +95,42 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+        <StackPanel Grid.Column="1" Margin="0 40 5 0">
+            <Button 
+                HorizontalAlignment="Right" 
+                Height="30" 
+                Width="30"
+                Margin="5 10 10 2"
+                Background="{StaticResource DeleteButtonBackground}"
+                Style="{StaticResource RoundButton}"
+                Command="{Binding DeleteEntryCommand}">
+                <Button.Content>
+                    <Path Data="M6 0l3 14l8 0l3 -14m-10 4l6 6m0 -6l-6 6" Stroke="White"/>
+                </Button.Content>
+                <Button.LayoutTransform>
+                    <ScaleTransform ScaleX="1.05" ScaleY="1.05" />
+                </Button.LayoutTransform>
+            </Button>
+            <Button 
+                HorizontalAlignment="Right" 
+                Height="30"
+                Width="30"
+                Margin="5 2 10 2"
+                Background="{StaticResource EditButtonBackground}"
+                Style="{StaticResource RoundButton}"
+                Command="{Binding EditEntryCommand}">
+                <Button.Content>
+                    <Grid Height="20" Width="20">
+                        <Grid.LayoutTransform>
+                            <RotateTransform Angle="25" />
+                        </Grid.LayoutTransform>
+                        <Path Data="M7 0l0 15l3 5l3 -5l0 -15l-6 0m0 3l6 0m0 12l-6 0" Stroke="White" />
+                    </Grid>
+                </Button.Content>
+                <Button.LayoutTransform>
+                    <ScaleTransform ScaleX="1.05" ScaleY="1.05" />
+                </Button.LayoutTransform>
+            </Button>
+        </StackPanel>
     </Grid>
 </UserControl>
