--- a/ChronicleLog.App/Themes/DarkThemeResourceDictionary.xaml
+++ b/ChronicleLog.App/Themes/DarkThemeResourceDictionary.xaml
@@ -1,18 +1,34 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <SolidColorBrush x:Key="AppBackgroundColor" Color="#0C0D10" />
-    <SolidColorBrush x:Key="SideBarBackgroundColor" Color="#040409" />
-    <SolidColorBrush x:Key="ActiveMenuBackgroundColor" Color="#101018" />
-    <SolidColorBrush x:Key="TextForegroundColor" Color="#FEFEFE" />
-    <SolidColorBrush x:Key="SecondaryTextForegroundColor" Color="#82C254" />
-    <SolidColorBrush x:Key="TertiaryTextForegroundColor" Color="#F41316" />
-    <SolidColorBrush x:Key="ButtonBackgroundColor" Color="#08A254" />
-    <SolidColorBrush x:Key="SecondaryButtonBackgroundColor" Color="#F44336" />
-    <SolidColorBrush x:Key="EntryBackgroundColor" Color="#080606" />
-    <SolidColorBrush x:Key="ScrollBarBackgroundColor" Color="#595959" />
 
-    <Color x:Key="EntryBoxShadowColor">#412854</Color>
-    <Color x:Key="WhiteColor">#FEFEFE</Color>
-    <Color x:Key="DarkColor">#0C0D10</Color>
-    <Color x:Key="MulberryColor">#C800A7</Color>
+    <!-- Application Colors -->
+    <SolidColorBrush x:Key="SidebarMenuBackground" Color="#101113" />
+    <SolidColorBrush x:Key="Active:MenuBackground" Color="#343644" />
+    <SolidColorBrush x:Key="ApplicationBackground" Color="#242531" />
+    
+    <!-- Text Colors -->
+    <SolidColorBrush x:Key="LightText" Color="#DCDCE1" />
+    <SolidColorBrush x:Key="DarkText" Color="#828393" />
+    <SolidColorBrush x:Key="CaretColor" Color="#D0D0D0" />
+    <SolidColorBrush x:Key="SelectionColor" Color="LightBlue" Opacity="0.7" />
+    
+    <!-- Button Colors -->
+    <SolidColorBrush x:Key="SearchTextBoxBackground" Color="#544551" />
+    <SolidColorBrush x:Key="SearchButtonBackground" Color="#101010" />
+    <SolidColorBrush x:Key="DeleteButtonBackground" Color="#544551" />
+    <SolidColorBrush x:Key="EditButtonBackground" Color="#5F5F5E" />
+    <SolidColorBrush x:Key="ConfirmButtonBackground" Color="#A0B494" />
+    <SolidColorBrush x:Key="WindowControlBackground" Color="#020202" />
+    <SolidColorBrush x:Key="Hover:WindowControlBackground" Color="#212121" />
+    <SolidColorBrush x:Key="Hover:CloseWindowControlBackground" Color="#FF0000" />
+    <SolidColorBrush x:Key="ScrollbarColor" Color="#464859" />
+    
+    <!-- Card Colors -->
+    <SolidColorBrush x:Key="EntryBorder" Color="#D0D0D0" />
+    <SolidColorBrush x:Key="EntryBackground" Color="#343644" />
+    <Color x:Key="EntryBoxShadow">#311844</Color>
+    
+    <!-- Additional Colors -->
+    <Color x:Key="WhiteColor">#D0D0D0</Color>
+    <Color x:Key="Active:TextBoxBorder">#C3ABC8</Color>
 </ResourceDictionary>
