--- a/ChronicleLog.App/MainWindow.xaml
+++ b/ChronicleLog.App/MainWindow.xaml
@@ -11,9 +11,11 @@
         MouseDown="Window_MouseDown"
         WindowStartupLocation="CenterScreen"
         WindowStyle="None"
+        ResizeMode="CanResizeWithGrip"
         Title="Chronicle Log"
         Background="{StaticResource AppBackgroundColor}"
         AllowsTransparency="True"
+        MinHeight="480" MinWidth="360"
         Height="600" Width="800">
     <Window.Resources>
         <DataTemplate DataType="{x:Type viewmodels:SearchEntriesViewModel}">
@@ -29,7 +31,7 @@
     
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="65"/>
+            <ColumnDefinition Width="0.5*" MinWidth="35"/>
             <ColumnDefinition Width="10.5*"/>
             <ColumnDefinition Width="2.5*"/>
         </Grid.ColumnDefinitions>
@@ -126,15 +128,6 @@
                 </RadioButton>
             </StackPanel>
         </Grid>
-
-        <components:HelpButton
-            Grid.Row="2"
-            Grid.Column="1"
-            Grid.ColumnSpan="2"
-            HorizontalAlignment="Right"
-            Width="300"
-            MaxHeight="225"
-            Margin="0 25 20 -5"/>
 
         <components:WindowControls 
             Grid.Row="0"
