--- a/ChronicleLog.App/MainWindow.xaml
+++ b/ChronicleLog.App/MainWindow.xaml
@@ -15,7 +15,7 @@
         Title="Chronicle Log"
         Background="{StaticResource AppBackgroundColor}"
         AllowsTransparency="True"
-        MinHeight="480" MinWidth="360"
+        MinHeight="360" MinWidth="360"
         Height="600" Width="800">
     <Window.Resources>
         <DataTemplate DataType="{x:Type viewmodels:SearchEntriesViewModel}">
@@ -131,7 +131,8 @@
 
         <components:WindowControls 
             Grid.Row="0"
-            Grid.Column="2"
+            Grid.Column="1"
+            Grid.ColumnSpan="2"
             Width="120"
             Height="30"
             VerticalAlignment="Top"
