--- a/ChronicleLog.App/MVVM/Views/Components/WindowControls.xaml
+++ b/ChronicleLog.App/MVVM/Views/Components/WindowControls.xaml
@@ -72,11 +72,12 @@
         </Style>
 
         <Style TargetType="{x:Type CheckBox}">
+            <Setter Property="Background" Value="{DynamicResource WindowControlBackground}" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type CheckBox}">
                         <DockPanel 
-                            Background="#121212">
+                            Background="{TemplateBinding Background}">
                             <Path
                                 Height="25"
                                 Data="M19 2l10 0l0 3.5l-2.5 0l0 5l3 0l0 2l-11 0l0 -2l3 0l0 -5l-2.5 0m6 7l-1 13l-1 -13" 
@@ -85,6 +86,7 @@
                                     <TransformGroup>
                                         <RotateTransform Angle="25" CenterX="13" CenterY="13" />
                                         <ScaleTransform ScaleX="0.75" ScaleY="0.75" CenterX="0"/>
+                                        <TranslateTransform X="-2.5" />
                                     </TransformGroup>
                                 </Path.RenderTransform>
                             </Path>
@@ -99,7 +101,7 @@
                     <Setter Property="Cursor" Value="Hand" />
                 </Trigger>
                 <Trigger Property="IsChecked" Value="True">
-                    <Setter Property="Background" Value="ForestGreen" />
+                    <Setter Property="Background" Value="#313131" />
                 </Trigger>
             </Style.Triggers>
         </Style>
