--- a/ChronicleLog.App/Resources/Dictionaries/TextBoxResourceDictionary.xaml
+++ b/ChronicleLog.App/Resources/Dictionaries/TextBoxResourceDictionary.xaml
@@ -25,6 +25,7 @@
                         </Border>
                         <TextBlock
                             x:Name="placeholder"
+                            Margin="5 0 0 0"
                             Text="{TemplateBinding Tag}"
                             Foreground="{StaticResource LightText}"
                             Padding="{TemplateBinding Padding}"
